This file lists bigger/noteworthy changes, only...

Version 0.9 (upcoming)
dyncall:
  o ARM64 support
  o PPC64 support (thanks Masanori)
  o introduced dcArgF and dcVArgF for flexible/convenient argument binding (works
    like dcCallF/dcVCallF without the function call)
  o added -fPIC by default for FreeBSD
  o ppc32 linux syscall support
dyncallback:
  o ARM64 support
  o PPC64 support (thanks Masanori)
doc:
  o added ARM64 support info and calling convention documentation
  o added PPC64 support info
tests:
  o callf test also tests new argf interface
bindings:
  o erldc: Erlang binding (thanks Erik)

Version 0.8
buildsys:
  o big simplification make-based build system, no more distinct GNU and BSD makefiles anymore
  o new, much simpler ./configure for new make-based build-system
  o support for in-source and out-of-source builds for make-based build systems
  o made configure.bat guess x64 as target arch for x64 windows hosts
  o based more sources on portasm generation
dyncall:
  o fix for ARMv7 Thumb-2 code (tested on iPhone 4 CDMA / iOS 6.0.1)
  o bugfixes for -O2 builds for SPARC-v9 and SPARC-v7 
  o new optimized call kernel for SPARC-v9 without conditionals
  o bigger refactoring and optimization of mips o32
  o x64 optimizations
dyncallback:
  o added callback support for plan9
  o big cleanup, removal of duplicate files after introduction of portasm
  o include path fixes for public facing APIs (removed relative paths)
doc:
  o cleanup of manual and corrections
  o added info about newly supported and/or tested platforms (e.g. FreeBSD on ARM)
  o restructured folder layout for documentation
  o added API doc for dyncallback and dynload
  o added manpages for dyncallback and dynload
tests:
  o added arm/thumb interwork test suite
bindings:
  o godc: added bindings for Go
  o rbdc: fixed and extended ruby bindings
  o shdc: renamed shell binding to shdc and added feature to list shared-objects' symbols

Version 0.7
architecture: