@@ -36,7 +36,7 @@
 
 \paragraph{\product{dyncall} support}
 
-\product{Dyncall} supports PowerPC (32bit) Big Endian (MSB) on Darwin (tested on Apple Mac OS X) and System V ABI systems (Linux, NetBSD, etc.).
+\product{Dyncall} and \product{dyncallback} are supported for PowerPC (32bit) Big Endian (MSB) on Darwin (tested on Apple Mac OS X) and Linux, however, fail for *BSD.
 
 
 \subsubsection{Mac OS X/Darwin}
@@ -149,7 +149,7 @@ linkage area                      & \vdots              &                       
 
 \begin{itemize}
 \item C++ this calls do not work.
-\item \product{dyncallback} is buggy.
+\item Callbacks don't work on *BSD.
 \end{itemize}
 
 \paragraph{Registers and register usage}
